# digger

./: .gitignore  BATCH_DIALOG_UPDATE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_SESSION_SUMMARY.md  CONTRIBUTING.md  FEATURES_V2.2.0.md  IMPLEMENTATION_STATUS.md  MENU_UPDATE.md  PARALLEL_COMPARISON_FIX.md  QUICK_TEST_DNS_SERVER_VALIDATION.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  THREADING_SOLUTION.md  TODO.md  TWO_PAGE_UI_REDESIGN.md  UI_FREEZE_ANALYSIS.md  UI_FREEZE_FINAL_SOLUTION.md  UI_FREEZE_ROOT_CAUSE.md  WARP.md  build-flatpak.sh  build.sh  combine-screenshots.sh  io.github.tobagin.digger.Devel.yml  io.github.tobagin.digger.dev.yml  io.github.tobagin.digger.yml  make-transparent.sh  meson.build  meson_options.txt  pyproject.toml  verify-icons.sh
.agent/skills/release/: SKILL.md
.agent/workflows/: release.md
.claude/commands/: commit.md
.github/: README.md
.github/workflows/: ci.yml  create-flathub-pr.yml  release-packages.yml  update-external-data.yml  update-flatpak.yml
.specify/memory/: constitution.md
assets/themes/: digger-enhanced.css
data/: digger.gresource.xml  gschemas.compiled  io.github.tobagin.digger.appdata.xml.in  io.github.tobagin.digger.desktop.in  io.github.tobagin.digger.gschema.xml  io.github.tobagin.digger.metainfo.xml  io.github.tobagin.digger.metainfo.xml.in  meson.build
data/icons/: README.md
data/presets/: dns-servers.json  record-types.json
data/themes/: digger.css
data/ui/: advanced-options.blp  autocomplete-dropdown.blp  enhanced-query-form.blp  enhanced-result-view.blp  history-popover.blp  preferences-dialog.blp  shortcuts-dialog.blp  window.blp
data/ui/dialogs/: autocomplete-dialog.blp  batch-lookup-dialog.blp  comparison-dialog.blp  dnsbl-dialog.blp  dnssec-dialog.blp  history-dialog.blp  monitor-dialog.blp  performance-dialog.blp  preferences-dialog.blp  propagation-dialog.blp  shortcuts-dialog.blp  subdomain-dialog.blp
data/ui/widgets/: advanced-options.blp  autocomplete-dropdown.blp  enhanced-history-search.blp  enhanced-query-form.blp  enhanced-result-view.blp
digger/: main.py  main.py.in  meson.build
digger/backend/: dig_executor.py  dig_parser.py  history.py  models.py
digger/ui/: digger.gresource.xml  history_widget.py  history_widget_blueprint.py  main_window.py  main_window_blueprint.py  query_widget.py  query_widget_blueprint.py  results_widget.py  results_widget_blueprint.py  settings_dialog.py
digger/ui/blueprints/: history_popover.blp  history_widget.blp  main_window.blp  query_widget.blp  results_widget.blp  settings_dialog.blp
digger/ui/compiled/: history_popover.ui  history_widget.ui  main_window.ui  query_widget.ui  results_widget.ui
openspec/: project.md
openspec/changes/add-command-export/: proposal.md
openspec/changes/add-query-presets/: proposal.md  tasks.md
openspec/changes/add-whois-integration/specs/whois-lookup/: spec.md
openspec/changes/archive/2025-10-20-enhance-security-quality/specs/code-quality/: spec.md
openspec/changes/archive/2025-10-20-enhance-security-quality/specs/performance/: spec.md
openspec/changes/archive/2025-11-05-add-command-export/: tasks.md
openspec/changes/archive/2025-11-05-add-command-export/specs/command-export/: spec.md
openspec/changes/archive/2025-11-05-add-query-presets/specs/query-presets/: spec.md
openspec/changes/archive/2025-11-05-add-responsive-mobile-ui/: FUTURE_ENHANCEMENTS.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-05-add-responsive-mobile-ui/specs/responsive-ui/: spec.md
openspec/changes/archive/2025-11-05-add-whois-integration/: proposal.md  tasks.md
openspec/changes/enhance-security-quality/: design.md  proposal.md  tasks.md
openspec/changes/enhance-security-quality/specs/security-validation/: spec.md
openspec/specs/code-quality/: spec.md
openspec/specs/command-export/: spec.md
openspec/specs/performance/: spec.md
openspec/specs/query-presets/: spec.md
openspec/specs/responsive-ui/: spec.md
openspec/specs/security-validation/: spec.md
openspec/specs/whois-lookup/: spec.md
packaging/: README.md  build-flatpak.sh  digger.spec  io.github.tobagin.digger.Devel.yml  io.github.tobagin.digger.yml
packaging/debian/: control  copyright
po/: LINGUAS  POTFILES  digger-vala.pot  it.po  meson.build  sv.po
screenshots/: README.md
scripts/: build.sh  tint-icons.py  tint-icons.sh
src/: Application.vala  Config.vala.in  advanced-options.vala  application.vala  config.vala.in  dns-query.vala  dns-record.vala  main.vala  preferences-dialog.vala  query-history.vala  shortcuts-dialog.vala  window.vala
src/dialogs/: AboutDialog.vala  AutocompleteDialog.vala  BatchLookupDialog.vala  ComparisonDialog.vala  DnsblDialog.vala  DnssecDialog.vala  HistoryDialog.vala  MonitorDialog.vala  PerformanceDialog.vala  PreferencesDialog.vala  PropagationDialog.vala  ShortcutsDialog.vala  SubdomainDialog.vala  Window.vala
src/features/: dns-presets.vala  domain-suggestions.vala
src/managers/: BatchLookupManager.vala  ComparisonManager.vala  ExportManager.vala  FavoritesManager.vala  PresetManager.vala
src/models/: DnsRecord.vala
src/services/: DnsQuery.vala  DnsblService.vala  DnssecValidator.vala  MonitorService.vala  PropagationService.vala  QueryHistory.vala  SecureDns.vala  SubdomainService.vala  WhoisService.vala
src/ui/: autocomplete-dropdown.vala  enhanced-history-search.vala  enhanced-query-form.vala  enhanced-result-view.vala  theme-manager.vala
src/utils/: CollectionUtils.vala  CommandGenerator.vala  Constants.vala  DnsPresets.vala  ThemeManager.vala  ValidationUtils.vala
src/widgets/: AdvancedOptions.vala  AutocompleteDropdown.vala  EnhancedQueryForm.vala  EnhancedResultView.vala  PerformanceGraph.vala  QueryResultView.vala
tests/backend/: test_dig_executor.py  test_dig_parser.py  test_history.py  test_models.py
